// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentTests overview 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="css-1d6wxci"
        >
          <table
            class="css-11y77l0"
            role="table"
          >
            <thead
              class="css-14kw1rx"
            >
              <tr
                class="css-vurnku"
                role="row"
              >
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    />
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Full name
                    </div>
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Title
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="css-tuhk50"
              role="rowgroup"
            >
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  colspan="4"
                >
                  <div
                    class="css-10n5rku"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="css-15vncxw-Cell"
                    >
                      Table.test.ts (8 tests)
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table overview
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    overview
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table noHeader
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    noHeader
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table sortable
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    sortable
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table filterable
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    filterable
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table grouping
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    grouping
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    <span
                      style="cursor: pointer;"
                      title="Toggle Row Expanded"
                    >
                      <svg
                        aria-hidden="true"
                        class="octicon"
                        fill="currentColor"
                        height="24"
                        role="img"
                        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M15.146 12.354l-5.792 5.792a.5.5 0 01-.854-.353V6.207a.5.5 0 01.854-.353l5.792 5.792a.5.5 0 010 .708z"
                        />
                      </svg>
                    </span>
                    <span>
                      failed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table editing
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    editing
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table rowSelect
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    rowSelect
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table pagination
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    pagination
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="css-43hdi9"
          >
            <div
              class="css-v7kut1"
            >
              total 8 tests
            </div>
            <div
              class="css-f5h6sg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentTests pagination 1`] = `
<DocumentFragment>
  <div
    class="css-1xkyebe"
  >
    <div
      class="css-jxxswp"
      id=""
    >
      <div
        class="css-xhp9da"
      >
        <h3
          class="css-16ist9v-BlockContainer"
        />
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div
          class="css-1d6wxci"
        >
          <table
            class="css-11y77l0"
            role="table"
          >
            <thead
              class="css-14kw1rx"
            >
              <tr
                class="css-vurnku"
                role="row"
              >
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 20px;"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    />
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Status
                    </div>
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Full name
                    </div>
                  </div>
                </th>
                <th
                  class="css-9hyy6f"
                  colspan="1"
                  role="columnheader"
                  style="width: 150px; cursor: pointer;"
                  title="Toggle SortBy"
                >
                  <div
                    class="css-wwqljn"
                  >
                    <div
                      class="css-206mi5"
                    >
                      Title
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="css-tuhk50"
              role="rowgroup"
            >
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  colspan="4"
                >
                  <div
                    class="css-10n5rku"
                    style="cursor: pointer;"
                    title="Toggle Row Expanded"
                  >
                    <svg
                      aria-hidden="true"
                      class="octicon"
                      fill="currentColor"
                      height="16"
                      role="img"
                      style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                     
                    <span
                      class="css-15vncxw-Cell"
                    >
                      Table.test.ts (8 tests)
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table overview
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    overview
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table noHeader
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    noHeader
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table sortable
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    sortable
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table filterable
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    filterable
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table grouping
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    grouping
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    <span
                      style="cursor: pointer;"
                      title="Toggle Row Expanded"
                    >
                      <svg
                        aria-hidden="true"
                        class="octicon"
                        fill="currentColor"
                        height="24"
                        role="img"
                        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M15.146 12.354l-5.792 5.792a.5.5 0 01-.854-.353V6.207a.5.5 0 01.854-.353l5.792 5.792a.5.5 0 010 .708z"
                        />
                      </svg>
                    </span>
                    <span>
                      failed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table editing
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    editing
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table rowSelect
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    rowSelect
                  </span>
                </td>
              </tr>
              <tr
                class="css-ijvt85"
                role="row"
              >
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 20px;"
                />
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <div>
                    0
                    <span>
                      passed
                    </span>
                  </div>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span
                    class="css-1borfr-Cell"
                  >
                    Table pagination
                  </span>
                </td>
                <td
                  class="css-l4u9co"
                  role="cell"
                  style="width: 150px;"
                >
                  <span>
                    pagination
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="css-43hdi9"
          >
            <div
              class="css-v7kut1"
            >
              Total: 8 records
            </div>
            <div
              class="css-f5h6sg"
            >
              <div
                class="css-1f9rp2t"
              >
                Page 1 of 1
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
